<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/milesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:tag="fahrenheitLabel"
        android:text="@string/miles_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="267dp"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/kilometersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:tag="celsiusLabel"
        android:text="@string/kilometers_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/milesLabel" />

    <EditText
        android:id="@+id/milesInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/miles_input_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:tag="fahrenheitInput"
        android:textColorHint="#546E7A"
        app:layout_constraintBaseline_toBaselineOf="@+id/milesLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/kilometersInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kilometers_input_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:tag="celsiusInput"
        android:textColorHint="#546E7A"
        app:layout_constraintBaseline_toBaselineOf="@+id/kilometersLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/convertDistanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:tag="convertButton"
        android:text="@string/convert_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilometersLabel"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>